feature/private_key_jwt authentication (#71)
* [token-client-*]: add support for private_key_jwt as clientauthentication method
* [token-client-spring]: add token-validation-spring and autoconfigure dependencies
* refactor ClientProperties to use constructor binding (when used by Spring @ConfigurationProperties) for better validation possibilities (in addition to the immutability)
* add separate class to hold properties for ClientAuthentication and ClientAssertion
* [token-client-core]:return empty map from formParameters, default values will be added in abstract class
* [token-client-core]:start with empty map in formParameters, default values will be added in abstract class
* [token-client-core]: set default expiry to 60s for ClientAssertion